Closed Bug 761019 Opened 14 years ago Closed 14 years ago

gfx/harfbuzz/src/hb-ot-shape-complex-indic.cc:620: error: comma at end of enumerator list

Categories

(Core :: Graphics: Text, defect)

Other
OpenBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: gaston, Assigned: gaston)

References

Details

Attachments

(1 file)

Probably fixes the build for me.
Assignee: nobody → landry
Attachment #629640 - Flags: review?(jdaggett)
Depends on: 758236
Attachment #629640 - Flags: review?(jdaggett) → review+
Keywords: checkin-needed
Reported upstream.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Also https://hg.mozilla.org/mozilla-central/rev/699ded02ce5a (this seems like it was double landed on both inbound and central).
Target Milestone: --- → mozilla15
(In reply to Ehsan Akhgari [:ehsan] from comment #5) > Also https://hg.mozilla.org/mozilla-central/rev/699ded02ce5a (this seems > like it was double landed on both inbound and central). Yes, sorry my fault, i screwed up here while doing my push for 761123 & 761136.
(In reply to Landry Breuil (:gaston) from comment #6) > (In reply to Ehsan Akhgari [:ehsan] from comment #5) > > Also https://hg.mozilla.org/mozilla-central/rev/699ded02ce5a (this seems > > like it was double landed on both inbound and central). > > Yes, sorry my fault, i screwed up here while doing my push for 761123 & > 761136. No harm done! I just mentioned it for future reference. :-)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: