Bug 761019 - Remove extra comma at end of enum after bug 758236. r=jdaggett